
public interface Adjustable {
    void adjust(double factor);
}